static/css/index.css
@font-face {
    font-family: "CabinetGrotesk";
    src: url('../fonts/CabinetGrotesk-Variable.woff2') format('woff2'),
         url('../fonts/CabinetGrotesk-Variable.woff') format('woff'),
         url('../fonts/CabinetGrotesk-Variable.ttf') format('truetype'),
         url('../fonts/CabinetGrotesk-Variable.eot') format('embedded-opentype');
    font-weight: 100 900;
    font-style: normal;
    font-display: swap;
}
/* Learned that Importing fonts in a CSS layer causes the font to not load, so I moved the import to the top of the file and removed it from the type layer. */

/* Set layering order for CSS Cascade Layers */
@layer reset, layout, base, type, components, utilities;

/* Layers!!!! */

@layer reset {
	/* CSS Reset based on https://piccalil.li/blog/a-modern-css-reset/ */

	html, body, div, span, applet, object, iframe,
	h1, h2, h3, h4, h5, h6, p, blockquote, pre,
	a, abbr, acronym, address, big, cite, code,
	del, dfn, em, img, ins, kbd, q, s, samp,
	small, strike, strong, sub, sup, tt, var,
	b, u, i, center,
	dl, dt, dd, ol, ul, li,
	fieldset, form, label, legend,
	table, caption, tbody, tfoot, thead, tr, th, td,
	article, aside, canvas, details, embed,
	figure, figcaption, footer, header, hgroup,
	menu, nav, output, ruby, section, summary,
	time, mark, audio, video {
		margin: 0;
		padding: 0;
		border: 0;
		font-size: 100%;
		font: inherit;
		vertical-align: baseline;
	}

	/* HTML5 display-role reset for older browsers */
	article, aside, details, figcaption, figure,
	footer, header, hgroup, menu, nav, section {
		display: block;
	}

	body {
		line-height: 1;
	}

	ol, ul {
		list-style: none;
	}

	blockquote, q {
		quotes: none;
	}

	blockquote:before, blockquote:after,
	q:before, q:after {
		content: '';
		content: none;
	}

	table {
		border-collapse: collapse;
		border-spacing: 0;
	}
}

@layer base {
	* {
		box-sizing: border-box;
	}

	@media screen and (prefers-reduced-motion: no-preference) {
		@view-transition {
			navigation: auto
		}
	}

	:root {
		--font: "CabinetGrotesk", "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
		--gap: 1em;
		--gap-small: 0.5em;
    	--gap-large: 2em;
    	--gap-small-fluid: calc(var(--gap-small) + 0.5vw);
    	--gap-medium-fluid: calc(var(--gap-medium) + 1vw);
    	--gap-large-fluid: calc(var(--gap-large) + 2vw);
		--line-height: 1.75;
	}

	@media (prefers-color-scheme: dark) {
		:root {
			--tertiary: hsl(59, 87%, 78%);
			--primary: hsl(0, 0%, 95%);
			--secondary: hsl(0, 0%, 100%);
			--body-bg: hsl(0, 0%, 15%);
			--box-shadow: 20px 20px 60px hsl(0, 0%, 11%), -20px -20px 60px hsl(0, 0%, 15%);
			--gradient: linear-gradient(to right, var(--tertiary), var(--primary), var(--tertiary));
		}
	}

	@media (prefers-color-scheme: light) {
		:root {
			--tertiary: hsl(0, 90%, 55%);
			--primary: hsl(0, 0%, 15%);
			--secondary: hsl(0, 0%, 100%);
			--body-bg: hsl(0, 0%, 95%);
			--box-shadow: 20px 20px 60px hsl(0, 0%, 79%), -20px -20px 60px hsl(0, 0%, 100%);
			--gradient: linear-gradient(to right, var(--secondary), var(--primary), var(--tertiary));
		}
	}

	img, picture, svg {
		max-width: 100%;
		height: auto;
	}

	body {
		font-family: var(--font);
		font-size: 100%;
		font-optical-sizing: auto;
		font-style: normal;
		background-color: var(--body-bg);
		padding: 0.5em;
		margin: 0.75em 0 0 0;
	}

	.post-list {
		list-style: none;
		padding: 0;
		margin: 2em 0;
	}

	.site-title {
		font-family: var(--font);
		font-weight: 700;
		line-height: 1.5;
		color: var(--primary);
		text-shadow: 0 0 .75em var(--primary);
		margin: 0;
	}

	.site-title a {
		text-decoration: none;
	}

	/* https://www.a11yproject.com/posts/how-to-hide-content/ */
	.visually-hidden {
		clip: rect(0 0 0 0);
		clip-path: inset(50%);
		height: 1px;
		overflow: hidden;
		position: absolute;
		white-space: nowrap;
		width: 1px;
	}

	.post-title, .post-title, .post-metadata, dt, h2, h3, h4 {
		color: var(--primary);
	}

	time {
		color: var(--primary);
	}

	p {
		color: var(--primary);
		line-height: var(--line-height);
	}

	a {
		color: var(--primary);
	}

	pre,
	code {
		font-family: var(--font-family-monospace);
	}
	pre:not([class*="language-"]) {
		margin: .5em 0;
		line-height: 1.375; /* 22px /16 */
		-moz-tab-size: var(--syntax-tab-size);
		-o-tab-size: var(--syntax-tab-size);
		tab-size: var(--syntax-tab-size);
		-webkit-hyphens: none;
		-ms-hyphens: none;
		hyphens: none;
		direction: ltr;
		text-align: left;
		white-space: pre;
		word-spacing: normal;
		word-break: normal;
		overflow-x: auto;
	}
	code {
		word-break: break-all;
	}
}

@layer layout {
	.container {
		display: grid;
		gap: var(--spacing-medium, 1rem);
		grid-template-columns: repeat(2, 1fr);
	}

	.col-span-1 { grid-column: span 1; }
	.col-span-2 { grid-column: span 2; }

	.col-start-1 { grid-column-start: 1; }
	.col-start-2 { grid-column-start: 2; }

	/* MEDIUM */
	@media (min-width: 48rem) {
		.container {
			grid-template-columns: repeat(6, 1fr);
			gap: var(--gap-fluid);
		}

		.header,
		.content {
			grid-row: 1;
		}

		.col-md-span-1 { grid-column: span 1; }
		.col-md-span-2 { grid-column: span 2; }
		.col-md-span-3 { grid-column: span 3; }
		.col-md-span-4 { grid-column: span 4; }
		.col-md-span-5 { grid-column: span 5; }
		.col-md-span-6 { grid-column: span 6; }

		.col-md-start-1 { grid-column-start: 1; }
		.col-md-start-2 { grid-column-start: 2; }
		.col-md-start-3 { grid-column-start: 3; }
		.col-md-start-4 { grid-column-start: 4; }
		.col-md-start-5 { grid-column-start: 5; }
		.col-md-start-6 { grid-column-start: 6; }
	}

	/* LARGE */
	@media (min-width: 64rem) {
		.container {
			grid-template-columns: repeat(12, 1fr);
		}

		.header,
		.content {
			grid-row: 1;
		}

		.col-lg-span-1  { grid-column: span 1; }
		.col-lg-span-2  { grid-column: span 2; }
		.col-lg-span-3  { grid-column: span 3; }
		.col-lg-span-4  { grid-column: span 4; }
		.col-lg-span-5  { grid-column: span 5; }
		.col-lg-span-6  { grid-column: span 6; }
		.col-lg-span-7  { grid-column: span 7; }
		.col-lg-span-8  { grid-column: span 8; }
		.col-lg-span-9  { grid-column: span 9; }
		.col-lg-span-10 { grid-column: span 10; }
		.col-lg-span-11 { grid-column: span 11; }
		.col-lg-span-12 { grid-column: span 12; }

		.col-lg-start-1  { grid-column-start: 1; }
		.col-lg-start-2  { grid-column-start: 2; }
		.col-lg-start-3  { grid-column-start: 3; }
		.col-lg-start-4  { grid-column-start: 4; }
		.col-lg-start-5  { grid-column-start: 5; }
		.col-lg-start-6  { grid-column-start: 6; }
		.col-lg-start-7  { grid-column-start: 7; }
		.col-lg-start-8  { grid-column-start: 8; }
		.col-lg-start-9  { grid-column-start: 9; }
		.col-lg-start-10 { grid-column-start: 10; }
		.col-lg-start-11 { grid-column-start: 11; }
		.col-lg-start-12 { grid-column-start: 12; }
	}

	header {
		padding: var(--gap-large-fluid) var(--gap-large-fluid) 0 var(--gap-large-fluid);
	}

	.content {
		padding: 0 var(--gap-large-fluid);
	}

	.main-content {
    	container-type: inline-size;
	}

	.post {
		margin-block-end: 1.75em;
	}
	@media screen and (min-width: 48.125em) {
		.post { margin-block-end: 2.25em; }
	}

	/* Nav */
	nav {
		margin-top: 10ch;
	}

	nav ul {
		justify-content: flex-start;
		list-style: none;
		margin-block-start: 0.5em;
		margin-block-end: 0.5em;
		padding: 0;
	}

	nav ul li {
		display: inline-block;
		margin: 0 var(--gap-small-fluid) 0 0;
	}

	nav ul li .active {
		border-left: 3px solid var(--tertiary);
		padding-left: 5px;
		text-decoration: none;
	}

	@media screen and (min-width: 40em) {
		nav {
			margin-top: 4ch;
		}

		nav ul li {
			display: block;
			margin: 0 0 var(--gap-small-fluid) 0;
		}

		nav ul li a {
			color: var(--primary);
			padding: 0;
			margin: 0;
		}
	}

	/* Tags */
	.post-tag {
		display: inline-flex;
		align-items: center;
		justify-content: center;
		text-transform: capitalize;
		font-style: italic;
	}
	.postlist-item > .post-tag {
		align-self: center;
	}

	.post-metadata time {
		margin-right: 1em;
	}

	footer {
		display: flex;
		flex-wrap: wrap;
	}

	footer div{
    	width: 50%;
	}

	@media screen and (min-width: 40em) {
		footer {
			padding: 0.75em 4em;
			margin-block-start: 2em;
		}
	}

	.site-title {
		font-family: var(--font);
		font-size: 2.25em;
		font-weight: 700;
		line-height: 1.5;
		color: var(--primary);
		transform: skew(-5deg) rotate(-5deg);
		background-clip: text;
		color: var(--tertiary);
		text-shadow: 0 0 0.75em var(--tertiary);
		margin: 0;
	}
}

@layer type {
	body {
		font-family: var(--font);
		font-size: 100%;
		font-optical-sizing: auto;
		font-style: normal;
		color: var(--primary);
	}

	p {
		margin-block-end: var(--gap);
		line-height: var(--line-height);
	}

	a {
		color: var(--primary);
		text-decoration-color: var(--tertiary);
		text-decoration-thickness: 2px;
		text-underline-offset: 4px;
	}

	a.external:after {
		content: url(/assets/external-arrow.svg);
		display: inline-block;
		background-size: 0 0;
		vertical-align: middle;
	}

	.container h2 { margin: 0; }

	.page-title {
		font-size: 2em;
		font-weight: 900;
		line-height: var(--line-height);
		color: var(--primary);
		margin-block-end: 2em;
	}

	figure {
        background: rgba(var(--secondary), 0.5);
        padding: 1em 1em 0.5em 1em;
        font-size: .875em;
        margin-block-start: 1.5em;
		margin-block-end: 1.5em;
        border-radius: 1ch;
    }

	figcaption {
		margin-top: 0.5em;
	}

	figcaption a {
		text-decoration-color: var(--tertiary);
		text-decoration-thickness: 1px;
		text-underline-offset: 2px;
	}

	footer p {
		font-size: .75em;
		margin-block-end: .25em;
		margin-block-start: .25em;
	}

	.post h2 {
		margin-block-start: 0.5em;
		margin-block-end: 0.25em;
	}

	.post h2 a {
		color: var(--primary);
		margin-block-start: 0;
	}

	.post p {
		margin-block-start: 0;
	}

	h2 {
		font-size: 1.75em;
		font-weight: 800;
		line-height: var(--line-height);
		color: var(--primary);
		margin-block-end: 0.75em;
	}

	h3 {
		font-size: 1.5em;
		font-weight: 700;
		line-height: var(--line-height);
		color: var(--primary);
	}

	h4 {
		font-size: 1.25em;
		font-weight: 600;
		line-height: var(--line-height);
		color: var(--primary);
	}
}

@layer components {
	.styled-intro {
		margin: 0 0 3em 0;
		font-weight: 900;
		width: 60cqw;
		line-height: var(--line-height);
	}

	@media screen and (min-width: 40em) {
		.styled-intro {
			text-align: left;
			margin: 0;
			padding-block-start: 2.5em;
		}
	}

	.timeline-heading {
		font-size: 1.5em;
		font-weight: 700;
		margin-block-end: 1em;
		color: var(--primary);
	}

	/* Posts list */
	.postlist {
		list-style: none;
		padding: 0;
		margin-top: 1.75em;
	}
	.postlist-item {
		display: flex;
		flex-wrap: wrap;
		align-items: baseline;
		counter-increment: start-from -1;
		margin-bottom: 1em;
	}

	.postlist-date,
	.postlist-item:before {
		font-size: 0.8125em; /* 13px /16 */
		color: var(--primary);
	}
	.postlist-date {
		word-spacing: -0.5px;
	}
	.post-metadata {
		display: inline-flex;
		flex-wrap: wrap;
		gap: .5em;
		list-style: none;
		padding: 0;
		margin: 0;
		margin-block-start: var(--gap);
		margin-block-end: var(--gap);
	}

	.post-metadata li { display: inline-block; }

	.postlist-link {
		font-size: 1.25em;
		font-weight: 600;
		flex-basis: calc(100% - 1.5em);
		padding-bottom: .5em;
	}
	.postlist-item-active .postlist-link {
		font-weight: bold;
	}
	.site-title span::after {
		content: "";
		display: block;
		position: absolute;
		width: 104%;
		left: -2%;
		height: 130%;
		top: -5%;
		z-index: -1;
	}
	.site-title span:nth-child(1):after {
		background: rgba(var(--primary), 0.5);
	}
	.site-title span:nth-child(2):after {
		background: rgba(var(--secondary), 0.5);
	}
}

@layer utilities {
	.justify-center { justify-content: center; }
  	.justify-between { justify-content: space-between; }
  	.items-center { align-items: center; }
  	.text-center { text-align: center; }
}

